err/trellocardupdate.err
Listing '.'...
Listing './bin'...
Compiling './bin/tu.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Levenshtein'...
Listing './lib/python3.5/site-packages/TrelloCardUpdate-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/Trolly-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/args-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/clint'...
Listing './lib/python3.5/site-packages/clint/packages'...
Listing './lib/python3.5/site-packages/clint/packages/colorama'...
Listing './lib/python3.5/site-packages/clint/textui'...
Listing './lib/python3.5/site-packages/clint-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_Levenshtein-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/trellocardupdate'...
Compiling './lib/python3.5/site-packages/trellocardupdate/cli.py'...
***   File "./lib/python3.5/site-packages/trellocardupdate/cli.py", line 101
    print '\n'.join([x for x in subcommands + ['-h', '--help'] if arg in x])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trellocardupdate/trelloupdate.py'...
***   File "./lib/python3.5/site-packages/trellocardupdate/trelloupdate.py", line 200
    print TrelloUpdater().cached_card_names_and_ids
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trolly'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './share'...
Listing './share/python-wheels'...
